--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ png = "0.17.13"
 pretty_env_logger = "0.5.0"
 thiserror = "1.0.61"
 tobj = "4.0.2"
-vulkanalia = "0.23.0"
-winit = "0.30.1"
+vulkanalia = { version="=0.23.0", features = ["libloading", "provisional", "window"] } 
+winit = "0.29"
